--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <tr><th>Product</th><td>Lantern</td></tr>
         <tr><th>Product Code</th><td>GBSL250117</td></tr>
         <tr><th>Product Material</th><td>Iron+PE</td></tr>
-        <tr><th>Product Size</th><td>20x20x30 Cm</td></tr>
+        <tr><th>Product Size</th><td>Length 20cm x Width 20cm x Height 30cm</td></tr>
         <tr><th>Product CBM</th><td>0.012</td></tr>
         <tr><th>Product Weight</th><td>Nill</td></tr>
-        <tr><th>Unit</th><td>Pc</td></tr>
-        <tr><th>Carton Size</th><td>62x42x32 Cm</td></tr>
+        <tr><th>Unit</th><td>Pcs</td></tr>
+        <tr><th>Carton Size</th><td>Length 62cm x Width 42cm x Height 32cm</td></tr>
         <tr><th>Carton Quantity</th><td>6</td></tr>
         <tr><th>Carton CBM</th><td>0.083</td></tr>
         <tr><th>20 Ft Container Carton Quantity</th><td>2024</td></tr>
