--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       width: 100%;
       max-width: 350px;
       height: auto;
-      margin-top: 20px;
+      margin-top: 50px;
     }
     table {
       width: 100%;
@@ -112,7 +112,7 @@
         <tr><th>20 Ft Container Carton Quantity</th><td>2024</td></tr>
         <tr><th>40 Ft Container Carton Quantity</th><td>4193</td></tr>
         <tr><th>40 HQ Container Carton Quantity</th><td>4916</td></tr>
-        <tr><th>Price</th><td>3.35 USD</td></tr>
+        <tr><th>Price</th><td>USD 3.35</td></tr>
         <tr><th>FOB Port</th><td>Qingdao</td></tr>
         <tr>
           <th>More Details - Packaging PPT</th>
