--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <tr><th>Product Material</th><td>Iron+PE</td></tr>
         <tr><th>Product Size</th><td>Length 20cm x Width 20cm x Height 30cm</td></tr>
         <tr><th>Product CBM</th><td>0.012</td></tr>
-        <tr><th>Product Weight</th><td>Nill</td></tr>
+        <tr><th>Product Weight</th><td></td></tr>
         <tr><th>Unit</th><td>Pcs</td></tr>
         <tr><th>Carton Size</th><td>Length 62cm x Width 42cm x Height 32cm</td></tr>
         <tr><th>Carton Quantity</th><td>6</td></tr>
@@ -113,7 +113,7 @@
         <tr><th>40 Ft Container Carton Quantity</th><td>4193</td></tr>
         <tr><th>40 HQ Container Carton Quantity</th><td>4916</td></tr>
         <tr><th>Price</th><td>USD 3.35</td></tr>
-        <tr><th>FOB Port</th><td>Qingdao</td></tr>
+        <tr><th>FOB Port</th><td>Qingdao, China</td></tr>
         <tr>
           <th>More Details - Packaging PPT</th>
           <td></td>
